# framework.appfw.message-port

./: CMakeLists.txt  project.config
global_res/usr/lib/tmpfiles.d/: tmpdir.conf
include/: message-port.h  message_port_error.h
packaging/: message-port.spec  messageportd.manifest  messageportd.service
src/: CMakeLists.txt  IpcClient.cpp  MessagePortProxy.cpp  MessagePortProxy.h  message-port.c  message-port.cpp
src/daemon/: CMakeLists.txt  MessagePortIpcServer.cpp  MessagePortService.cpp  MessagePortStub.cpp  messageportd.cpp
src/daemon/inc/: IMessagePortIpcServerEventListener.h  MessagePortIpcServer.h  MessagePortService.h  MessagePortStub.h
src/inc/: message-port-messages.h
